# westra_passes_for_nakarte

./: .flake8  .gitignore  MANIFEST.in  Makefile  fetch-dump.py  gpx_regions_to_geojson.py  make_passes_json.py  make_region_labels_gpx.py  mypy.ini  pass_normalizers.py  passes_coverage.py  pylintrc  pyproject.toml  regions_tree.py  setup.cfg  tree_to_file_for_debugging.py  utils.py  webmercator.py  westra_to_nakarte_json.py
data/: regions.txt  westra_labels_1.gpx  westra_labels_2.gpx
data/fstr/: fstr_region_labels_1.gpx  fstr_region_labels_2.gpx
data/westra/: regions.txt  westra_region_labels_1.gpx  westra_region_labels_2.gpx
mountain_passes_for_nakarte/: gpx_regions_to_geojson.py  passes_coverage.py  utils.py  webmercator.py
mountain_passes_for_nakarte/fstr/: catalogueparser.py  nakartewriter.py  odsreader.py  regions.csv  regions.py  utils.py
mountain_passes_for_nakarte/scripts/: fstr_save_table.py  fstr_to_nakarte_json.py  westra_to_nakarte_json.py  westra_tree_to_file_for_debugging.py
mountain_passes_for_nakarte/westra/: pass_normalizers.py  regions_tree.py
scripts/: gpx_regions_to_geojson.py  tree_to_file_for_debugging.py  westra_to_nakarte_json.py
tests/fstr/: test_catalogueparser.py
