[metadata]
name = mountain_passes_for_nakarte
version = 0.0.1

[options]
packages = mountain_passes_for_nakarte
install_requires =
    shapely
    numpy
    scipy

[options.entry_points]
console_scripts =
  fstr_passes_for_nakarte = fstr_passes_for_nakarte.main:main

[options.extras_require]
test =
    black
    pylint
    flake8<6
    flake8-import-order
    mypy
    types-setuptools
    types-shapely


# How to make PyCharm and mypy to work with editable installation:
# export SETUPTOOLS_ENABLE_FEATURES="legacy-editable"
# https://github.com/python/mypy/issues/13392