[metadata]
name = mountain_passes_for_nakarte
version = 0.0.1

[options]
packages = mountain_passes_for_nakarte
install_requires =
    shapely
    numpy
    scipy

[options.entry_points]
console_scripts =
  westra_tree_to_file_for_debugging = mountain_passes_for_nakarte.scripts.westra_tree_to_file_for_debugging:main
  westra_to_nakarte_json = mountain_passes_for_nakarte.scripts.westra_to_nakarte_json:main
  gpx_regions_to_geojson = mountain_passes_for_nakarte.scripts.gpx_regions_to_geojson:main

[options.extras_require]
test =
    black
    pylint
    flake8<6
    flake8-import-order
    mypy
    types-setuptools
    types-shapely


# How to make PyCharm and mypy to work with editable installation:
# export SETUPTOOLS_ENABLE_FEATURES="legacy-editable"
# https://github.com/python/mypy/issues/13392